# std-c99-proj-skill

./: .editorconfig  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql.yml
skills/std-c99-proj/: SKILL.md
skills/std-c99-proj/assets/containers/: Containerfile.debian  Containerfile.rhel
skills/std-c99-proj/assets/templates/: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  main.c  mem_arena.c  mem_arena.h  test_arena.c  utils.c  utils.h
skills/std-c99-proj/references/: ARENA_API.md  RULES.md  TARGETS.md
skills/std-c99-proj/scripts/: build.sh  docs.sh  init_project.sh  static_analysis.sh  test.sh
